--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -127,4 +127,21 @@ th, td {
 
 .login_name {
     font-weight: bold;
+    padding: 10px 10px;
+}
+#create_button {
+    margin: auto;
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    color: #000000;
+    padding: 10px 10px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+}
+
+#link_decor {
+    text-decoration: none;
+    font-weight: bold;
 }
